--- a/package.json
+++ b/package.json
@@ -7,11 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
-  "homepage": "bmensah72538.github.io",
   "dependencies": {
     "axios": "^1.6.7",
     "react": "^18.2.0",
